--- a/package.json
+++ b/package.json
@@ -9,18 +9,43 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@reduxjs/toolkit": "https://pkg.csb.dev/reduxjs/redux-toolkit/commit/436d29c1/@reduxjs/toolkit",
+    "@types/react-redux": "^7.1.34",
+    "@types/redux-persist": "^4.3.1",
+    "apexcharts": "^4.1.0",
+    "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.468.0",
+    "next": "15.0.4",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
-    "next": "15.0.4"
+    "react-hook-form": "^7.54.0",
+    "react-redux": "https://pkg.csb.dev/reduxjs/react-redux/commit/3271037e/react-redux",
+    "react-transition-group": "^4.4.5",
+    "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.14.5",
+    "zod": "^3.23.8",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/react-transition-group": "^4.4.11",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "15.0.4"
+    "eslint-config-next": "15.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5"
   }
 }
