--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-redux": "https://pkg.csb.dev/reduxjs/react-redux/commit/3271037e/react-redux",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
-    "sweetalert2": "^11.14.5",
+    "sweetalert2": "^11.6.13",
     "zod": "^3.23.8",
     "zustand": "^5.0.2"
   },
@@ -43,6 +43,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.16",
